--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "axios": "^0.21.1",
+    "babel-plugin-inline-dotenv": "^1.6.0",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
     "expo-av": "~9.1.2",
